@@ -1987,10 +1987,13 @@ What @code{install.packages} does by default is different on Unix-alikes
 available @emph{source} packages on @acronym{CRAN} (or other
 repository/ies), downloads the latest version of the package sources,
 and installs them (via @code{R CMD INSTALL}).  On Windows it looks (by
-default) at the list of @emph{binary} versions of packages available for
-your version of @R{} and downloads the latest versions (if any),
-although optionally it will also download and install a source package
-by setting the @code{type} argument.
+default) first at the list of @emph{binary} versions of packages
+available for your version of @R{} and downloads the latest versions (if
+any).  If no binary version is available or the source version is newer,
+it will install the source versions of packages without compiled
+C/C++/Fortran code, and offer to do so for those with, if @command{make}
+is available (and this can be tuned by option
+@code{"install.packages.compile.from.source"}).
 
 On Windows @code{install.packages} can also install a binary package
 from a local @file{zip} file (or the URL of such a file) by setting
@@ -2068,15 +2071,21 @@ installed as described in @xref{Building from source}.
 
 On OS X @code{install.packages} works as it does on other Unix-alike
 systems, but there are additional types starting with @code{mac.binary}
-(available for and the default in the @acronym{CRAN} distribution but
-not when compiling from source: @code{mac.binary.mavericks} for a
-`Mavericks' build and @code{mac.binary} for a `Snow Leopard' build with
-@code{"default'} a synonym for the apppriate variant) which can be
-passed to @code{install.packages} in order to download and install
-binary packages from a suitable repository.  These OS X binary package
-files have the extension @samp{.tgz}.  The @Rapp{} GUI provides menus
-for installation of either binary or source packages, from
-@acronym{CRAN} or local files.
+(available for the @acronym{CRAN} distribution but not when compiling
+from source: @code{mac.binary.mavericks} for a `Mavericks' build and
+@code{mac.binary} for a `Snow Leopard' build with @code{"default"} a
+synonym for the apppriate variant) which can be passed to
+@code{install.packages} in order to download and install binary packages
+from a suitable repository.  These OS X binary package files have the
+extension @samp{.tgz}.  The @Rapp{} GUI provides menus for installation
+of either binary or source packages, from @acronym{CRAN} or local files.
+
+On @R{} builds using binary packages, the default is type @code{both}:
+this looks first at the list of binary packages available for your
+version of @R{} and installs the latest versions (if any).  If no binary
+version is available or the source version is newer, it will install the
+source versions of packages without compiled C/C++/Fortran code and offer
+to do so for those with, if @command{make} is available.
 
 Note that most binary packages including compiled code are tied to a
 particular series (e.g.@: @R{} 3.0.x or 3.1.x) of @R{}.
