@@ -340,7 +340,6 @@ install.packages <-
     }
 
 
-# for testing .Platform$pkgType <- "mac.binary"
     ## Look at type == "both"
     ## NB it is only safe to use binary packages with a Mac OS X
     ## build that uses the same R foundation layout as CRAN since
@@ -356,7 +355,7 @@ install.packages <-
             stop("type == \"both\" cannot be used with 'repos = NULL'")
         type <- "source"
         contriburl <- contrib.url(repos, "source")
-        # The line above may have changed the repos option, so..
+        ## The line above may have changed the repos option, so ...
         if (missing(repos)) repos <- getOption("repos")
         available <-
             available.packages(contriburl = contriburl, method = method,
@@ -373,6 +372,10 @@ install.packages <-
 
         srcvers <- available[bins, "Version"]
         later <- as.numeric_version(binvers) < srcvers
+
+        action <- getOption("install.packages.compile.from.source",
+                            "interactive")
+        if(!nzchar(Sys.which(Sys.getenv("MAKE", "make")))) action <- "never"
         if(any(later)) {
             msg <- ngettext(sum(later),
                             "There is a binary version available but the source version is later",
@@ -386,21 +389,25 @@ install.packages <-
                               check.names = FALSE)[later, ]
             print(out)
             cat("\n")
-            if(interactive() && any(later & hasSrc)) {
-                msg <-
-                    ngettext(sum(later & hasSrc),
-                             "Do you want to install from sources the package which needs compilation?",
-                             "Do you want to install from sources the packages which need compilation?")
-                message(msg, domain = NA)
-                res <- readline("y/n: ")
-                if(res != "y") later <- later & !hasSrc
+            if(any(later & hasSrc)) {
+                if(action == "interactive" && interactive()) {
+                    msg <-
+                        ngettext(sum(later & hasSrc),
+                                 "Do you want to install from sources the package which needs compilation?",
+                                 "Do you want to install from sources the packages which need compilation?")
+                    message(msg, domain = NA)
+                    res <- readline("y/n: ")
+                    if(res != "y") later <- later & !hasSrc
+                } else if (action == "never") {
+                    cat("  Binaries will be installed\n")
+                    later <- later & !hasSrc
+                }
             }
         }
         bins <- bins[!later]
 
-        if(interactive() && length(srcOnly)) {
-            nc <- !( available[srcOnly, "NeedsCompilation"] %in% "no" )
-            s2 <- srcOnly[nc]
+        if(length(srcOnly)) {
+            s2 <- srcOnly[!( available[srcOnly, "NeedsCompilation"] %in% "no" )]
             if(length(s2)) {
                 msg <-
                     ngettext(length(s2),
@@ -409,9 +416,14 @@ install.packages <-
                 msg <- c(paste0(msg, ": "), sQuote(s2))
                 msg <- strwrap(paste(msg, collapse = " "), exdent = 2)
                 message(paste(msg, collapse = "\n"), domain = NA)
-                message("Do you want to attempt to install these from sources?")
-                res <- readline("y/n: ")
-                if(res != "y") pkgs <- setdiff(pkgs, s2)
+                if(action == "interactive" && interactive()) {
+                    message("Do you want to attempt to install these from sources?")
+                    res <- readline("y/n: ")
+                    if(res != "y") pkgs <- setdiff(pkgs, s2)
+                } else if(action == "never") {
+                    cat("  These will not be installed\n")
+                    pkgs <- setdiff(pkgs, s2)
+                }
             }
         }
 
